--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
 <LinearLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
@@ -6,7 +7,16 @@
     android:layout_height="fill_parent">
     <android.support.v4.view.ViewPager
         android:id="@+id/my_pager"
+        android:layout_weight="1"
         android:layout_width="fill_parent" 
         android:layout_height="fill_parent"/>
+    <com.viewpagerindicator.UnderlinePageIndicator
+        android:id="@+id/indicator"
+        android:layout_height="2dp"
+        android:layout_width="fill_parent"
+        android:background="#FFCCCCCC"/>
+<!--        app:selectedColor="#FFCC0000"
+        app:fadeDelay="1000"
+        app:fadeLength="1000"-->
 </LinearLayout>
 
