--- a/res/layout/main_1.xml
+++ b/res/layout/main_1.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <TextView
-        android:id="@+id/tv"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="#ffffffff"
-        android:textColor="#ff000000"
-        android:text="Himnario Adventista"/>
-</ScrollView>
+        android:text="nada 1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:text="nada 1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
