--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,6 +5,10 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+    <com.viewpagerindicator.TabPageIndicator
+        android:id="@+id/tab_indicator"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/my_pager"
         android:layout_weight="1"
